added error checkers

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,18 +3,18 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: aobshatk <aobshatk@mail.com>               +#+  +:+       +#+         #
+#    By: aobshatk <aobshatk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/09 22:34:02 by aobshatk          #+#    #+#              #
-#    Updated: 2025/04/09 23:51:21 by aobshatk         ###   ########.fr        #
+#    Updated: 2025/04/11 15:37:21 by aobshatk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CC = cc 
+CC = cc
 CFLAGS = -Wall -Wextra -Werror -g
 
-UTILS = ./utils/checkers.c
-SRC = ./src/init_philos.c 
+UTILS = ./utils/checkers.c ./utils/helpers.c
+SRC = ./src/init_philos.c
 
 UTILOBJS = $(patsubst %.c, ./objs/%.o, $(notdir $(UTILS)))
 SRCOBJS = $(patsubst %.c, ./objs/%.o, $(notdir $(SRC)))
@@ -33,7 +33,7 @@ NAME = philo
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(LIBR)
-	@$(CC) $(CFLAGS) main.c -o $(NAME)
+	@$(CC) $(CFLAGS) main.c objs/$(LIBR) -o $(NAME)
 	@echo "Build complete"
 
 all: $(NAME)
@@ -52,5 +52,5 @@ fclean: clean
 	@echo "Full clean complete"
 
 re: fclean $(NAME)
- 
+
 .PHONY: all clean fclean re
